# the-turing-machine-simulator

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
tm-core/: Cargo.toml
tm-core/src/: lib.rs
tm-parser/: Cargo.toml
