[workspace]
resolver = "2"
members = [".", "tm-core", "tm-parser"]

[package]
name = "the-turing-machine-simulator"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tm-core = { path = "tm-core" }
tm-parser = { path = "tm-parser" }

[dependencies]
egui = "0.34.1"
wgpu = "29.0.1"
winit = "0.30.13"
